--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,19 +29,18 @@ dependencies {
     })
 
     // Google Play Services
-    compile 'com.google.android.gms:play-services:9.6.1'
+    compile 'com.google.android.gms:play-services:9.8.0'
+    compile 'com.google.firebase:firebase-messaging:9.8.0'
+    compile 'com.google.code.gson:gson:2.6.2'
 
     // Support Libraries
+    /// compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.balysv:material-ripple:1.0.2'
-    compile 'com.google.firebase:firebase-messaging:9.6.1'
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.arimorty:floatingsearchview:2.0.3'
-  //  compile 'com.github.clans:fab:1.6.4'
     testCompile 'junit:junit:4.12'
 }
 
