Se agregan elementos al gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,19 @@ local.properties
 ehthumbs.db
 Thumbs.db
 build/
+
+#Windows-specific file
+_windows
+inspection
+colors.scheme.xml
+androidStudioFirstRun.xml
+debugger.xml
+diff.xml
+github_settings.xml
+gradle.run.settings.xml
+ide.general.xml
+ignore.xml
+IntelliLang.xml
+ui.lnf.xml
+web-browsers.xml
+.idea/
