--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.android.support:design:25.0.1'
     compile 'com.balysv:material-ripple:1.0.2'
     compile 'com.github.arimorty:floatingsearchview:2.0.3'
+    compile 'me.grantland:autofittextview:0.2.+'
     testCompile 'junit:junit:4.12'
 }
 
