Autor: Edwin Fernando Muñoz Delgado Fecha: 12/12/2016 Descripción: Se crea modulo de compartir código con su respectiva funcionalidad.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,11 @@
         <activity
             android:name=".views.activities.SettingDriverProfileActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".views.activities.FreeDocosActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
