--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,12 @@ dependencies {
     // Google Play Services
     compile 'com.google.android.gms:play-services:9.8.0'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
+    compile 'com.google.firebase:firebase-database:9.8.0'
+    compile 'com.google.firebase:firebase-auth:9.8.0'
     compile 'com.google.code.gson:gson:2.6.2'
     // Support Libraries
     /// compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:cardview-v7:25.0.1'
