--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,13 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:9.8.0'
 
     compile 'com.google.firebase:firebase-messaging:9.8.0'
-    compile 'com.google.firebase:firebase-database:9.8.0'
+    compile 'com.google.firebase:firebase-core:9.0.0'
+    compile 'com.google.firebase:firebase-database:9.0.0'
     compile 'com.google.firebase:firebase-auth:9.8.0'
     compile 'com.google.code.gson:gson:2.6.2'
     // Support Libraries
     /// compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:appcompat-v7:25.0.1'
