--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.android.support:design:25.0.1'
+
+    compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.balysv:material-ripple:1.0.2'
     compile 'com.github.arimorty:floatingsearchview:2.0.3'
     compile 'me.grantland:autofittextview:0.2.+'
